# calendarai

./: .gitignore  CLAUDE.md  Makefile  railway.json
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  railway.json
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  booking_categories.py  deps.py  email_parser.py  smart_scheduler.py
backend/app/agents/core/: __init__.py  registry.py  router.py  runner.py  schemas.py
backend/app/agents/tools/: __init__.py  booking_tools.py  browse_tools.py  browser_tools.py  calendar_tools.py  calendly_tools.py  discover_tools.py  eventbrite_tools.py  gcal_tools.py  gmail_tools.py  http_extract.py  mindbody_tools.py  restaurant_tools.py  social_tools.py  square_tools.py  stagehand_tools.py  time_tools.py  web_tools.py
backend/app/agents/workflows/: __init__.py  base.py  restaurant.py
backend/app/auth/: middleware.py  oauth_state.py  rate_limit.py
backend/app/routers/: agents.py  calendly.py  eventbrite.py  events.py  gmail.py  google_calendar.py  ical.py  profile.py  resy.py  sharing.py  square.py
backend/app/services/: calendly.py  email_poller.py  encryption.py  eventbrite.py  gmail.py  google_calendar.py  ical.py  mindbody.py  profiles.py  resy.py  square.py  supabase.py
backend/supabase/migrations/: 001_initial.sql  002_threads_and_rate_limits.sql  003_social_booking.sql  004_profile_booking_fields.sql  005_resy_linking.sql  006_integrations.sql
backend/tests/: conftest.py  test_browse_tools.py  test_events_api.py  test_rate_limit_bypass.py  test_router.py  test_schemas.py  test_sharing_api.py  test_social_tools.py  test_web_tools.py
docs/: 1_react_native.md  current-state.md  e2e-testing-plan.md  google-for-startups.md  restaurant-reservation-apis.md
frontend/: app.json  package-lock.json  package.json
frontend/__tests__/: dates.test.ts  eventStore.test.ts  timePicker.test.ts
landing/: index.html
native/: app.json  package-lock.json  package.json
(+95 files in other folders)
